further build script updates for new server.